# Ciphra

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/ciphra/: Cargo.toml
crates/ciphra-bench/: Cargo.toml
crates/ciphra-bench/src/: main.rs
crates/ciphra-crypto/: Cargo.toml
crates/ciphra-crypto/src/: aead.rs  argon2.rs  blake2b.rs  chacha20.rs  hmac.rs  hybrid.rs  keccak.rs  lib.rs  ml_dsa.rs  ml_kem.rs  poly1305.rs  rand.rs  sha256.rs  x25519.rs  zeroize.rs
crates/ciphra-engine/: Cargo.toml
crates/ciphra-engine/src/: codec.rs  lib.rs
crates/ciphra-ffi/: Cargo.toml
crates/ciphra-ffi/include/: ciphra.h
crates/ciphra-ffi/src/: lib.rs
crates/ciphra-migrate/: Cargo.toml
crates/ciphra-migrate/src/: lib.rs
crates/ciphra-net/: Cargo.toml
crates/ciphra-net/src/: lib.rs  socks5.rs
crates/ciphra-server/: Cargo.toml
crates/ciphra-server/src/: main.rs
crates/ciphra-sql/: Cargo.toml
crates/ciphra-sql/src/: lexer.rs  lib.rs  parser.rs
crates/ciphra-storage/: Cargo.toml
crates/ciphra-storage/src/: lib.rs
crates/ciphra-testutil/: Cargo.toml
crates/ciphra-testutil/src/: lib.rs
crates/ciphra/src/: main.rs
docs/: BENCHMARKS.md
docs/adr/: 0001-own-engine-in-rust.md  0002-zero-dependency-crypto.md  0003-server-blind-architecture.md  0004-audited-crypto-backend.md
drivers/: README.md
drivers/go/: ciphra.go  ciphra_test.go  go.mod
drivers/js/: ciphra.js
drivers/python/: ciphra.py  test_ciphra.py
scripts/: bench-vs-sqlite.sh
