[package]
name = "ciphra-engine"
description = "Ciphra execution engine: catalog, row codec and query execution over encrypted storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
# Forward the audited crypto backend switch (see ciphra-crypto).
audited = ["ciphra-crypto/audited", "ciphra-net/audited"]

[dependencies]
ciphra-storage.workspace = true
ciphra-crypto.workspace = true
ciphra-sql.workspace = true
ciphra-net.workspace = true

[dev-dependencies]
ciphra-testutil.workspace = true
