[package]
name = "ciphra-net"
description = "Ciphra remote-storage protocol: a server that stores sealed bytes it cannot read, and the client for it"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ciphra-storage.workspace = true

[dev-dependencies]
ciphra-testutil.workspace = true
