[package]
name = "ciphra"
description = "Ciphra: an encrypted-by-default SQL database. CLI and REPL."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "ciphra"
path = "src/main.rs"

[features]
# Build against the audited crypto backend (see ciphra-crypto).
audited = ["ciphra-engine/audited"]

[dependencies]
ciphra-engine.workspace = true
ciphra-migrate.workspace = true
